--- a/work.html
+++ b/work.html
@@ -350,16 +350,91 @@
                 <img src="/our_works/movie-posters/IruthiSutru_7.jpg" alt="Iruthi Sutru"
                     class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
             </div>
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/kaathi-set1-1sheet-01.jpg')">
+                <img src="/our_works/movie-posters/kaathi-set1-1sheet-01.jpg" alt="kaathi"
+                    class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
+            </div>
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/LEO_1_1.jpg')">
+                <img src="/our_works/movie-posters/LEO_1_1.jpg" alt="Leo"
+                    class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
+            </div>
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/Marsal-3.jpg')">
+                <img src="/our_works/movie-posters/Marsal-3.jpg" alt="mersal"
+                    class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
+            </div>
+
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/MASTER.jpg')">
+                <img src="/our_works/movie-posters/MASTER.jpg" alt="master"
+                    class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
+            </div>
+
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/Meiyazhagan.jpg')">
+                <img src="/our_works/movie-posters/Meiyazhagan.jpg" alt="Meiyazhagan"
+                    class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
+            </div>
+            <div class="flip-card"
+                onclick="openFullscreenImage('/our_works/movie-posters/NF-GhostStories-Poster-FINAL-01-copy.jpg')">
+                <img src="/our_works/movie-posters/NF-GhostStories-Poster-FINAL-01-copy.jpg" alt="GhostStories"
+                    class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
+            </div>
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/OKK_2.jpg')">
+                <img src="/our_works/movie-posters/OKK_2.jpg" alt="ok kanmani"
+                    class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
+            </div>
+
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/PS-5-ensemble-poster.jpg')">
+                <img src="/our_works/movie-posters/PS-5-ensemble-poster.jpg" alt="ps2 Ponniyin selvan"
+                    class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
+            </div>
+
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/solo-try-set-01-new.jpg')">
+                <img src="/our_works/movie-posters/solo-try-set-01-new.jpg" alt="solo dq"
+                    class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
+            </div>
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/sp 3.jpg')">
+                <img src="/our_works/movie-posters/sp 3.jpg" alt="Soorarai Pottru surya"
+                    class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
+            </div>
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/super-deluxe.jpg')">
+                <img src="/our_works/movie-posters/super-deluxe.jpg" alt="super Deluxe"
+                    class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
+            </div>
+
             <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/threean-30x40.jpg')">
                 <img src="/our_works/movie-posters/threean-30x40.jpg" alt="threean"
                     class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
             </div>
+
             <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/ThugLife-poster-01.jpg')">
                 <img src="/our_works/movie-posters/ThugLife-poster-01.jpg" alt="ThugLife"
                     class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
             </div>
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/T-L-Web.jpg')">
+                <img src="/our_works/movie-posters/T-L-Web.jpg" alt="coolie"
+                    class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
+            </div>
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/Vettaiyan-1stLook-Web.jpg')">
+                <img src="/our_works/movie-posters/Vettaiyan-1stLook-Web.jpg" alt="Vettaiyan rajini"
+                    class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
+            </div>
+
+
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/threean-30x40.jpg')">
+                <img src="/our_works/movie-posters/threean-30x40.jpg" alt="threean"
+                    class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
+            </div>
+
             <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/vikram 9.jpg')">
-                <img src="/our_works/movie-posters/vikram 9.jpg" alt="vikram"
+                <img src="/our_works/movie-posters/vikram 9.jpg" alt="vikram lokesh kamal rolex"
+                    class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
+            </div>
+            <div class="flip-card"
+                onclick="openFullscreenImage('/our_works/movie-posters/vv-1st-cut-poster-option-03-copy.jpg')">
+                <img src="/our_works/movie-posters/vv-1st-cut-poster-option-03-copy.jpg" alt="vikram vedha"
+                    class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
+            </div>
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/Yaman_3.jpg')">
+                <img src="/our_works/movie-posters/Yaman_3.jpg" alt="yaman"
                     class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
             </div>
         </div>
