--- a/work.html
+++ b/work.html
@@ -419,8 +419,8 @@
             </div>
 
 
-            <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/threean-30x40.jpg')">
-                <img src="/our_works/movie-posters/threean-30x40.jpg" alt="threean"
+            <div class="flip-card" onclick="openFullscreenImage('/our_works/dn.jpg')">
+                <img src="/our_works/dn.jpg" alt="dhruva Natchathiram"
                     class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
             </div>
 
