--- a/work.html
+++ b/work.html
@@ -359,7 +359,7 @@
                     class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
             </div>
             <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/Marsal-3.jpg')">
-                <img src="/our_works/movie-posters/Marsal-3.jpg" alt="mersal"
+                <img src="/our_works/movie-posters/Marsal-3.jpg" alt="mersal thalapathy"
                     class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
             </div>
 
@@ -383,7 +383,7 @@
             </div>
 
             <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/PS-5-ensemble-poster.jpg')">
-                <img src="/our_works/movie-posters/PS-5-ensemble-poster.jpg" alt="ps2 Ponniyin selvan"
+                <img src="/our_works/movie-posters/PS-5-ensemble-poster.jpg" alt="ps2 Ponniyin selvan 2"
                     class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
             </div>
 
@@ -396,12 +396,12 @@
                     class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
             </div>
             <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/super-deluxe.jpg')">
-                <img src="/our_works/movie-posters/super-deluxe.jpg" alt="super Deluxe"
+                <img src="/our_works/movie-posters/super-deluxe.jpg" alt="super Deluxe vjs"
                     class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
             </div>
 
             <div class="flip-card" onclick="openFullscreenImage('/our_works/movie-posters/threean-30x40.jpg')">
-                <img src="/our_works/movie-posters/threean-30x40.jpg" alt="threean"
+                <img src="/our_works/movie-posters/threean-30x40.jpg" alt="threean h vinoth"
                     class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
             </div>
 
@@ -420,7 +420,7 @@
 
 
             <div class="flip-card" onclick="openFullscreenImage('/our_works/dn.jpg')">
-                <img src="/our_works/dn.jpg" alt="dhruva Natchathiram"
+                <img src="/our_works/dn.jpg" alt="Dhruva Natchathiram"
                     class="w-full h-full object-contain filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer">
             </div>
 
