--- a/aboutus.html
+++ b/aboutus.html
@@ -71,12 +71,11 @@
 
             .section-1-image {
                 width: 35% !important;
-                left: 13% !important;
+                left: 60% !important;
             }
 
             .green-box-1 {
                 height: 18% !important;
-                left: 18% !important;
                 top: 3% !important;
             }
 
@@ -87,7 +86,7 @@
             }
 
             .green-box-2 {
-                left: 0% !important;
+                left: 15% !important;
                 height: 7% !important;
             }
 
@@ -98,7 +97,7 @@
             }
 
             .section-2-text-1 {
-                top: 50% !important;
+                bottom: 20% !important;
                 left: 20% !important;
                 width: 30% !important;
             }
@@ -115,8 +114,7 @@
             }
 
             .blue-box-2 {
-                height: 5% !important;
-                right: 30% !important
+                height: 5% !important; 
             }
 
             .blue-box-3 {
@@ -126,7 +124,7 @@
             }
 
             .section-3-image {
-                top: 5% !important;
+                top: 0 !important;
                 left: 15% !important;
                 width: 30% !important;
                 height: 40% !important;
@@ -245,22 +243,20 @@
     </section>
     <!--Bento section 1-->
     <section id="about-content"
-        class="min-h-screen relative bg-white bg-[url('/about-assets/frame-body.png')] bg-cover bg-fixed">
+        class="min-h-screen lg:min-h-[200vh]  relative bg-white bg-[url('/about-assets/frame-body.png')] bg-cover bg-fixed">
         <!-- First Section -->
-        <div class="min-h-screen w-full relative overflow-hidden px-4 md:px-0">
+        <div class="min-h-[55vh]  lg:min-h-[65vh] w-full relative overflow-hidden px-4 md:px-0">
             <!-- Yellow Accent Blocks - Hidden on small screens -->
             <div
-                class="hidden md:block absolute top-[20%] w-[2.5%] h-[68%] bg-[url('/about-assets/yellow-box-1.png')] slide-in yellow-box-1">
+                class="hidden md:block absolute top-[30%] w-[2.5%] h-[68%] bg-[url('/about-assets/yellow-box-1.png')] slide-in yellow-box-1">
             </div>
+
             <div
-                class="block absolute top-[60%] right-0 sm:top-[35.2%] sm:right-[30.2%] w-[30%] sm:w-[12%] h-[11%] bg-[url('/about-assets/yellow-box-1.png')] slide-in yellow-box">
-            </div>
-            <div
-                class="block absolute top-[80%] right-52 sm:top-[7.2%] sm:right-[4.5%] h-[8%] w-[50%] sm:w-[11.7%] sm:h-[20.8%] bg-[url('/about-assets/yellow-box-2.png')] slide-in yellow-box-2">
+                class="block absolute top-[80%] right-52 sm:top-[5.2%] sm:right-0 h-[8%] w-[50%] sm:w-[8%] sm:h-[20.8%] bg-[url('/about-assets/yellow-box-2.png')] slide-in yellow-box-2">
             </div>
 
             <!-- "WE GROW IDEAS" Section -->
-            <div class="pt-16 md:absolute md:top-[10%] md:left-[5%] md:w-[30%] w-full slide-in section-1-text">
+            <div class="pt-16 md:absolute md:top-[10%] md:left-[10%] md:w-[30%] w-full slide-in section-1-text">
                 <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-blue-600 mb-4 uppercase">Our vision</h2>
                 <p class="text-gray-600 w-full md:w-[74%]">
                     To transform every brand story from a blank page into a powerful narrative that resonates, inspires,
@@ -270,27 +266,25 @@
 
             <!-- Office Image -->
             <div
-                class="mt-8 md:absolute md:top-[45%] md:left-[13%] md:w-[30%] md:h-[30%] w-full slide-in section-1-image">
+                class="mt-8 md:absolute md:top-[5%] md:left-[50%] md:w-[30%] md:h-[30%] w-full slide-in section-1-image">
                 <img src="/about-assets/body-image-1.png" alt="Modern office space"
                     class="w-full md:object-contain shadow-lg" />
             </div>
         </div>
 
         <!-- Second Section -->
-        <div class="min-h-screen w-full relative overflow-hidden px-4 md:px-0">
+        <div class="min-h-screen w-full relative overflow-hidden sm:overflow-visible px-4 md:px-0">
             <!-- Green Accent Blocks - Hidden on small screens -->
             <div
-                class="block absolute -top-0 right-0 h-[8%] w-[20%] sm:top-[2%] sm:left-[23.4%] sm:w-[16%] sm:h-[22%] bg-[url('/about-assets/green-box-1.png')] slide-in green-box-1">
+                class="hidden md:block absolute h-[5%] w-[20%] right-0 sm:top-[15%] sm:w-[16%] bg-[url('/about-assets/green-box-1.png')] slide-in green-box-1">
             </div>
             <div
-                class="block absolute top-[90%] right-0 sm:top-[64%] sm:left-[11.8%] w-[40%] sm:w-[11.7%] h-[8%] sm:h-[12%] bg-[url('/about-assets/green-box-2.png')] slide-in green-box-2">
-            </div>
-            <div
-                class="hidden md:block absolute bottom-[9.7%] right-0 w-[15%] h-[8%] bg-[url('/about-assets/green-box-3.png')] slide-in green-box-3">
+                class="block absolute bottom-5 right-0 sm:top-[50%] sm:left-[10%] w-[40%] sm:w-[11.7%] h-[8%] sm:h-[12%] bg-[url('/about-assets/green-box-2.png')] slide-in green-box-2">
             </div>
 
+
             <!-- "WE CHAMPION CLIENTS" Section -->
-            <div class="pt-16 md:absolute md:top-[4%] md:right-[32%] md:w-[25%] w-full slide-in section-2-text">
+            <div class="pt-10 md:absolute top-12 md:left-[55%] md:w-[25%] w-full slide-in section-2-text">
                 <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-blue-600 mb-4 custom-mt-10 uppercase">How we
                     work .</h2>
                 <p class="text-gray-600 w-full md:w-[75%]">
@@ -299,10 +293,16 @@
                     Together, we turn stories into visual experiences that connect, move, and endure.
                 </p>
             </div>
+            <!-- Office Image -->
+            <div class="mt-8 md:absolute lg:left-[8%] md:w-[28%] md:h-[42%] w-full slide-in section-2-image-1">
+                <img src="/about-assets/body-image-2.png"
+                    alt="Modern office space with wooden table and glass partitions"
+                    class="w-full md:h-full md:object-contain" />
+            </div>
 
             <!-- "WE COLLABORATE FEARLESSLY" Section -->
             <div
-                class="mt-8 md:mt-0 md:absolute md:top-[55%] lg:left-[30%] md:w-[20%] w-full slide-in section-2-text-1">
+                class="mt-8 md:mt-0 md:absolute md:-bottom-20 lg:left-[10%] md:w-[20%] w-full slide-in section-2-text-1">
                 <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-blue-600 mb-4 uppercase">What sets us apart.
                 </h2>
                 <p class="text-gray-600">
@@ -311,54 +311,26 @@
                 </p>
             </div>
 
-            <!-- Office Image -->
-            <div
-                class="mt-8 md:absolute md:top-[44%] lg:right-[18%] md:w-[28%] md:h-[42%] w-full slide-in section-2-image-1">
-                <img src="/about-assets/body-image-2.png"
-                    alt="Modern office space with wooden table and glass partitions"
-                    class="w-full md:h-full md:object-contain" />
-            </div>
-        </div>
 
-        <!-- Third Section -->
-        <div class="min-h-screen w-full relative overflow-hidden px-4 md:px-0">
-            <!-- Blue Accent Blocks - Hidden on small screens -->
-            <div
-                class="block absolute top-0 left-0 sm:top-[5%] sm:left-0 w-[25%] sm:w-[2%] h-[7.8%] sm:h-[30%] bg-[url('/about-assets/blue-box-1.png')] slide-in blue-box-1">
-            </div>
-            <div
-                class="hidden md:block absolute top-0 right-[25%] w-[10%] h-[5%] bg-[url('/about-assets/blue-box-2.png')] slide-in blue-box-2">
-            </div>
-            <div
-                class="block absolute bottom-10 right-0 sm:bottom-[16%] sm:right-[27%] w-[30%] sm:w-[20%] h-24 sm:h-[32%] bg-[url('/about-assets/blue-box-3.png')] slide-in blue-box-3">
-            </div>
 
             <!-- Office Image -->
             <div
-                class="pt-16 md:absolute md:top-[5%] md:left-[18%] md:w-[20%] md:h-[25%] w-full slide-in section-3-image">
+                class="pt-16 md:absolute md:bottom-[-20%] md:left-[55%] md:w-[30%] md:h-[45%] w-full slide-in section-3-image">
                 <img src="/about-assets/body-image-3.png"
                     alt="Interior office space with wooden frames and glass partitions"
                     class="w-full md:h-full md:object-cover shadow-lg" />
             </div>
+            <!-- Blue Accent Blocks - Hidden on small screens -->
 
-            <!-- "WE ADD VALUE" Section -->
-            <div class="mt-8 md:absolute md:top-[15%] md:right-[20%] md:w-[25%] w-full slide-in section-3-text">
-                <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-blue-600 mb-4">WE ADD VALUE</h2>
-                <p class="text-gray-600 w-full md:w-[70%]">
-                    Whatever the task, no matter whether it's big or small, we bring our experience and expertise to
-                    that project and strive to deliver the best possible solution.
-                </p>
+            <div
+                class="hidden md:block absolute bottom-20 right-0 lg:bottom-[-10%] lg:right-10 w-[5%] h-[4%] bg-[url('/about-assets/blue-box-2.png')] slide-in blue-box-2">
+            </div>
+            <div
+                class="hidden md:block absolute bottom-0 sm:bottom-20 lg:bottom-[-20%] left-0  sm:left-0 w-[25%] sm:w-[2%] h-[7.8%] sm:h-[15%] bg-[url('/about-assets/blue-box-1.png')] slide-in blue-box-1">
             </div>
 
-            <!-- "WE CRAFT SOLUTIONS" Section -->
-            <div class="mt-8 md:absolute md:bottom-[30%] md:left-[13%] md:w-[25%] w-full slide-in section-3-text-1">
-                <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold text-blue-600 mb-4">WE CRAFT SOLUTIONS.</h2>
-                <p class="text-gray-600 w-full md:w-[70%]">
-                    Beautiful creative work only goes so far. To deliver something that really engages you need to add
-                    some blood, sweat and tears.
-                </p>
-            </div>
         </div>
+
     </section>
 
 
