--- a/aboutus.html
+++ b/aboutus.html
@@ -243,7 +243,7 @@
     </section>
     <!--Bento section 1-->
     <section id="about-content"
-        class="min-h-screen lg:min-h-[200vh]  relative bg-white bg-[url('/about-assets/frame-body.png')] bg-cover bg-fixed">
+        class="min-h-screen lg:min-h-[200vh]  relative bg-white bg-[url('/about-assets/frame-body.png')] bg-cover bg-fixed sm:mb-0 mb-[5vh]">
         <!-- First Section -->
         <div class="min-h-[55vh]  lg:min-h-[65vh] w-full relative overflow-hidden px-4 md:px-0">
             <!-- Yellow Accent Blocks - Hidden on small screens -->
@@ -315,7 +315,7 @@
 
             <!-- Office Image -->
             <div
-                class="pt-16 md:absolute md:bottom-[-20%] md:left-[55%] md:w-[30%] md:h-[45%] w-full slide-in section-3-image">
+                class="pt-5 sm:pt-16 md:absolute md:bottom-[-20%] md:left-[55%] md:w-[30%] md:h-[45%] w-full slide-in section-3-image">
                 <img src="/about-assets/body-image-3.png"
                     alt="Interior office space with wooden frames and glass partitions"
                     class="w-full md:h-full md:object-cover shadow-lg" />
