--- a/team.html
+++ b/team.html
@@ -148,7 +148,7 @@
                 </div>
                 <div class="text-left flex flex-col justify-center mt-16 sm:mt-0 sm:w-3/5">
                     <h2 class="text-md sm:text-xl font-bold text-[#595959] uppercase">GOPI PRASANNAA </h2>
-                    <p class="text-xs sm:text-base text-[#a8a8a8] uppercase">FOUNDER/CEO</p>
+                    <p class="text-xs sm:text-base text-[#a8a8a8] uppercase mb-5">FOUNDER/CEO</p>
 
                     <p class="text-[15px] mt-2">
                         Gopi is a rare jack-of-all-trades and master of them all. As creator, innovator, developer,
@@ -181,7 +181,7 @@
                 </div>
                 <div class="text-left flex flex-col justify-center mt-16 sm:mt-0 sm:w-3/5">
                     <h2 class="text-md sm:text-xl font-bold text-[#595959] uppercase">S V UDAYAKUMAR</h2>
-                    <p class="text-xs sm:text-base text-[#a8a8a8] uppercase">CREATIVE DIRECTOR</p>
+                    <p class="text-xs sm:text-base text-[#a8a8a8] uppercase mb-5">CREATIVE DIRECTOR</p>
                     <p class="text-[15px] mt-2">
                         Udaya Kumar is a design leader with over a decade of experience in brand, film, and spatial
                         design. A graduate in Sculpture from the Government College of Fine Arts, Chennai, he has led
@@ -211,7 +211,7 @@
                 </div>
                 <div class="text-left flex flex-col justify-center mt-16 sm:mt-0 sm:w-3/5">
                     <h2 class="text-md sm:text-xl font-bold text-[#595959] uppercase">VINOTH C</h2>
-                    <p class="text-xs sm:text-base text-[#a8a8a8] uppercase">General Managers</p>
+                    <p class="text-xs sm:text-base text-[#a8a8a8] uppercase mb-5">chief photographer</p>
                     <p class="text-[15px] mt-2">
                         Vinoth Chandrasekaran lives and breathes photography. After graduating from college, he honed
                         his craft under the mentorship of Sharad Haksar, one of India’s most awarded advertising
@@ -240,7 +240,7 @@
                 </div>
                 <div class="text-left flex flex-col justify-center mt-16 sm:mt-0 sm:w-3/5">
                     <h2 class="text-md sm:text-xl font-bold text-[#595959] uppercase">Vasan S</h2>
-                    <p class="text-xs sm:text-base text-[#a8a8a8] uppercase">chief technology officer</p>
+                    <p class="text-xs sm:text-base text-[#a8a8a8] uppercase mb-5">chief technology officer</p>
                     <p class="text-[15px] mt-2">
                         Vasan S is an accomplished entrepreneur with a strong foundation in computer science, holding a
                         degree from IIT Madras. With early career stints at NYSE and Enguage in Atlanta, he returned to
