branding label change

--- a/work.html
+++ b/work.html
@@ -450,9 +450,8 @@
                     <img src="/FINAL/BrickHouse/BRICK-house-01.jpg" onclick="openWorkModal(event)" alt="thunivu"
                         class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
                 </div>
-                <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">Brick House</h3>
-                <p class="order-3 md:order-2 text-sm text-gray-600 mb-5">Rebranding to reclaim a
-                    legacy</p>
+                <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">Aussiebaker</h3>
+                <p class="order-3 md:order-2 text-sm text-gray-600 mb-5">This is a short placeholder description intended to demonstrate layout behavior and text styling.</p>
             </div>
 
             <div class="flex flex-col md:justify-between">
@@ -462,8 +461,7 @@
                         class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
                 </div>
                 <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">Brick House</h3>
-                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">Rebranding to reclaim a
-                    legacy</p>
+                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description intended to demonstrate layout behavior and text styling.</p>
             </div>
 
             <div class="flex flex-col md:justify-between">
@@ -472,9 +470,8 @@
                     <img src="/FINAL/BrickHouse/BRICK-house-03.jpg" onclick="openWorkModal(event)" alt="beast"
                         class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
                 </div>
-                <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">Brick House</h3>
-                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">Rebranding to reclaim a
-                    legacy</p>
+                <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">Kolli Hills</h3>
+                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description intended to demonstrate layout behavior and text styling.</p>
             </div>
 
             <div class="flex flex-col md:justify-between">
@@ -484,8 +481,44 @@
                         class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
                 </div>
                 <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">kraken</h3>
-                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">Rebranding to reclaim a
-                    legacy</p>
+                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description intended to demonstrate layout behavior and text styling.</p>
+            </div>
+
+            <div class="flex flex-col md:justify-between">
+                <div
+                    class="order-1 md:order-3 w-full h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] flex items-center justify-center overflow-hidden">
+                    <img src="/FINAL/Kraken/kraken-1.jpg" onclick="openWorkModal(event)" alt="beast"
+                        class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
+                </div>
+                <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">The Route</h3>
+                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description intended to demonstrate layout behavior and text styling.</p>
+            </div>
+            <div class="flex flex-col md:justify-between">
+                <div
+                    class="order-1 md:order-3 w-full h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] flex items-center justify-center overflow-hidden">
+                    <img src="/FINAL/Kraken/kraken-1.jpg" onclick="openWorkModal(event)" alt="beast"
+                        class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
+                </div>
+                <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">Stroker</h3>
+                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description intended to demonstrate layout behavior and text styling.</p>
+            </div>
+            <div class="flex flex-col md:justify-between">
+                <div
+                    class="order-1 md:order-3 w-full h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] flex items-center justify-center overflow-hidden">
+                    <img src="/FINAL/Kraken/kraken-1.jpg" onclick="openWorkModal(event)" alt="beast"
+                        class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
+                </div>
+                <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">TDKF</h3>
+                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description intended to demonstrate layout behavior and text styling.</p>
+            </div>
+            <div class="flex flex-col md:justify-between">
+                <div
+                    class="order-1 md:order-3 w-full h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] flex items-center justify-center overflow-hidden">
+                    <img src="/FINAL/Kraken/kraken-1.jpg" onclick="openWorkModal(event)" alt="beast"
+                        class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
+                </div>
+                <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">Plan Monk</h3>
+                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description intended to demonstrate layout behavior and text styling.</p>
             </div>
 
         </div>
