work page thumbnail update

--- a/work.html
+++ b/work.html
@@ -447,78 +447,86 @@
             <div class="flex flex-col md:justify-between">
                 <div
                     class="order-1 md:order-3 w-full h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] flex items-center justify-center overflow-hidden">
-                    <img src="/FINAL/BrickHouse/BRICK-house-01.jpg" onclick="openWorkModal(event)" alt="thunivu"
+                    <img src="/branding/AussieHomeBaker/Aussiebaker-03.jpg" onclick="openWorkModal(event)" alt="thunivu"
                         class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
                 </div>
                 <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">Aussiebaker</h3>
-                <p class="order-3 md:order-2 text-sm text-gray-600 mb-5">This is a short placeholder description intended to demonstrate layout behavior and text styling.</p>
+                <p class="order-3 md:order-2 text-sm text-gray-600 mb-5">This is a short placeholder description
+                    intended to demonstrate layout behavior and text styling.</p>
             </div>
 
             <div class="flex flex-col md:justify-between">
                 <div
                     class="order-1 md:order-3 w-full h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] flex items-center justify-center overflow-hidden">
-                    <img src="/FINAL/BrickHouse/BRICK-house-02.jpg" onclick="openWorkModal(event)" alt="beast"
+                    <img src="/branding/BrickHouse/BRICK-house-02.jpg" onclick="openWorkModal(event)" alt="beast"
                         class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
                 </div>
                 <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">Brick House</h3>
-                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description intended to demonstrate layout behavior and text styling.</p>
+                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description
+                    intended to demonstrate layout behavior and text styling.</p>
             </div>
 
             <div class="flex flex-col md:justify-between">
                 <div
                     class="order-1 md:order-3 w-full h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] flex items-center justify-center overflow-hidden">
-                    <img src="/FINAL/BrickHouse/BRICK-house-03.jpg" onclick="openWorkModal(event)" alt="beast"
+                    <img src="/branding/KolliHills/kolli-01.jpg" onclick="openWorkModal(event)" alt="beast"
                         class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
                 </div>
                 <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">Kolli Hills</h3>
-                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description intended to demonstrate layout behavior and text styling.</p>
+                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description
+                    intended to demonstrate layout behavior and text styling.</p>
             </div>
 
             <div class="flex flex-col md:justify-between">
                 <div
                     class="order-1 md:order-3 w-full h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] flex items-center justify-center overflow-hidden">
-                    <img src="/FINAL/Kraken/kraken-1.jpg" onclick="openWorkModal(event)" alt="beast"
+                    <img src="/branding/Kraken/kraken-1.jpg" onclick="openWorkModal(event)" alt="beast"
                         class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
                 </div>
                 <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">kraken</h3>
-                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description intended to demonstrate layout behavior and text styling.</p>
+                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description
+                    intended to demonstrate layout behavior and text styling.</p>
             </div>
 
             <div class="flex flex-col md:justify-between">
                 <div
                     class="order-1 md:order-3 w-full h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] flex items-center justify-center overflow-hidden">
-                    <img src="/FINAL/Kraken/kraken-1.jpg" onclick="openWorkModal(event)" alt="beast"
+                    <img src="/branding/TheRoute/ROUTE-03.jpg" onclick="openWorkModal(event)" alt="beast"
                         class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
                 </div>
                 <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">The Route</h3>
-                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description intended to demonstrate layout behavior and text styling.</p>
+                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description
+                    intended to demonstrate layout behavior and text styling.</p>
             </div>
             <div class="flex flex-col md:justify-between">
                 <div
                     class="order-1 md:order-3 w-full h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] flex items-center justify-center overflow-hidden">
-                    <img src="/FINAL/Kraken/kraken-1.jpg" onclick="openWorkModal(event)" alt="beast"
+                    <img src="/branding/Stoker/stoker-1.jpg" onclick="openWorkModal(event)" alt="beast"
                         class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
                 </div>
                 <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">Stroker</h3>
-                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description intended to demonstrate layout behavior and text styling.</p>
+                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description
+                    intended to demonstrate layout behavior and text styling.</p>
             </div>
             <div class="flex flex-col md:justify-between">
                 <div
                     class="order-1 md:order-3 w-full h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] flex items-center justify-center overflow-hidden">
-                    <img src="/FINAL/Kraken/kraken-1.jpg" onclick="openWorkModal(event)" alt="beast"
+                    <img src="/branding/TDKF/TDKF-4.jpg" onclick="openWorkModal(event)" alt="beast"
                         class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
                 </div>
                 <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">TDKF</h3>
-                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description intended to demonstrate layout behavior and text styling.</p>
+                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description
+                    intended to demonstrate layout behavior and text styling.</p>
             </div>
             <div class="flex flex-col md:justify-between">
                 <div
                     class="order-1 md:order-3 w-full h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px] flex items-center justify-center overflow-hidden">
-                    <img src="/FINAL/Kraken/kraken-1.jpg" onclick="openWorkModal(event)" alt="beast"
+                    <img src="/branding/PlanMonk/3.jpg" onclick="openWorkModal(event)" alt="beast"
                         class="w-full h-full object-cover filter grayscale hover:grayscale-0 transition duration-300 cursor-pointer" />
                 </div>
                 <h3 class="order-2 md:order-1 text-base md:text-2xl font-bold uppercase mt-2">Plan Monk</h3>
-                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description intended to demonstrate layout behavior and text styling.</p>
+                <p class="order-3 md:order-2 text-sm text-gray-600 mt-1 mb-5">This is a short placeholder description
+                    intended to demonstrate layout behavior and text styling.</p>
             </div>
 
         </div>
@@ -939,6 +947,73 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script>
+        const workDetails = [
+            {
+                id: 1, title: 'KHS, Kolli Hills',
+                desc: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque mauris nec ligula blandit, at vulputate arcu tincidunt. 
+                Aliquam erat volutpat. Sed pretium, arcu at hendrerit faucibus, odio lorem tincidunt sem, in 
+                volutpat urna ligula id risus. Vivamus id vehicula eros. Aenean fringilla tempus sapien, 
+                non viverra libero ultrices sit amet. Quisque ac mi cursus, pellentesque ligula at, facilisis nisi.`,
+                imageSources: ['/branding/KolliHills/kolli-01.jpg', '/branding/KolliHills/kolli-02.jpg', '/branding/KolliHills/kolli-03.jpg', '/branding/KolliHills/kolli-04.jpg']
+            },
+            {
+                id: 2, title: 'TDKF',
+                desc: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque mauris nec ligula blandit, at vulputate arcu tincidunt. 
+                Aliquam erat volutpat. Sed pretium, arcu at hendrerit faucibus, odio lorem tincidunt sem, in 
+                volutpat urna ligula id risus. Vivamus id vehicula eros. Aenean fringilla tempus sapien, 
+                non viverra libero ultrices sit amet. Quisque ac mi cursus, pellentesque ligula at, facilisis nisi.`,
+                imageSources: ['/branding/TDKF/TDKF-1.jpg', '/branding/TDKF/TDKF-2.jpg', '/branding/TDKF/TDKF-3.png', '/branding/TDKF/TDKF-4.jpg']
+            },
+            {
+                id: 3, title: 'Brick House',
+                desc: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque mauris nec ligula blandit, at vulputate arcu tincidunt. 
+                Aliquam erat volutpat. Sed pretium, arcu at hendrerit faucibus, odio lorem tincidunt sem, in 
+                volutpat urna ligula id risus. Vivamus id vehicula eros. Aenean fringilla tempus sapien, 
+                non viverra libero ultrices sit amet. Quisque ac mi cursus, pellentesque ligula at, facilisis nisi.`,
+                imageSources: ['/branding/BrickHouse/BRICK-house-01.jpg', '/branding/BrickHouse/BRICK-house-02.jpg', '/branding/BrickHouse/BRICK-house-03.jpg', '/branding/BrickHouse/BRICK-house-04.jpg']
+            },
+            {
+                id: 4, title: 'Kraken',
+                desc: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque mauris nec ligula blandit, at vulputate arcu tincidunt. 
+                Aliquam erat volutpat. Sed pretium, arcu at hendrerit faucibus, odio lorem tincidunt sem, in 
+                volutpat urna ligula id risus. Vivamus id vehicula eros. Aenean fringilla tempus sapien, 
+                non viverra libero ultrices sit amet. Quisque ac mi cursus, pellentesque ligula at, facilisis nisi.`,
+                imageSources: ['/branding/Kraken/kraken-1.jpg', '/branding/Kraken/kraken-2.jpg']
+            },
+            {
+                id: 5,
+                title: 'AussieHomeBaker',
+                desc: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque mauris nec ligula blandit, at vulputate arcu tincidunt. 
+                Aliquam erat volutpat. Sed pretium, arcu at hendrerit faucibus, odio lorem tincidunt sem, in 
+                volutpat urna ligula id risus. Vivamus id vehicula eros. Aenean fringilla tempus sapien, 
+                non viverra libero ultrices sit amet. Quisque ac mi cursus, pellentesque ligula at, facilisis nisi.`,
+                imageSources: ['/branding/AussieHomeBaker/Aussiebaker-00.jpg', '/branding/AussieHomeBaker/Aussiebaker-01.jpg', '/branding/AussieHomeBaker/Aussiebaker-02.jpg', '/branding/AussieHomeBaker/Aussiebaker-03.jpg']
+            },
+            {
+                id: 6,
+                title: 'Plan Monk',
+                desc: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque mauris nec ligula blandit, at vulputate arcu tincidunt. 
+                Aliquam erat volutpat. Sed pretium, arcu at hendrerit faucibus, odio lorem tincidunt sem, in 
+                volutpat urna ligula id risus. Vivamus id vehicula eros. Aenean fringilla tempus sapien, 
+                non viverra libero ultrices sit amet. Quisque ac mi cursus, pellentesque ligula at, facilisis nisi.`,
+                imageSources: ['/branding/PlanMonk/1.jpg', '/branding/PlanMonk/2.jpg', '/branding/PlanMonk/3.jpg', '/branding/PlanMonk/4.jpg', '/branding/PlanMonk/5.jpg', '/branding/PlanMonk/6.jpg',  '/branding/PlanMonk/7.jpg']
+            },
+            {
+                id: 7,
+                title: 'The Route',
+                desc: `The Route is a celebrity management and film production company currently representing some of the leading personalities from the Entertainment industry including Thalapathy Vijay, Samantha, Atlee, Lokesh Kanagaraj, Keerthy Suresh, Rashmika Mandanna, Kalyani Priyadarshan, Krithi Shetty, Meenakshi Chaudhary, Kathir, Arjun Das and Monisha Mohan Menon.`,
+                imageSources: ['/branding/TheRoute/ROUTE-01.jpg', '/branding/TheRoute/ROUTE-02.jpg', '/branding/TheRoute/ROUTE-03.jpg', '/branding/TheRoute/ROUTE-04.jpg']
+            },
+            {
+                id: 8,
+                title: 'Stroker',
+                desc: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque mauris nec ligula blandit, at vulputate arcu tincidunt. 
+                Aliquam erat volutpat. Sed pretium, arcu at hendrerit faucibus, odio lorem tincidunt sem, in 
+                volutpat urna ligula id risus. Vivamus id vehicula eros. Aenean fringilla tempus sapien, 
+                non viverra libero ultrices sit amet. Quisque ac mi cursus, pellentesque ligula at, facilisis nisi.`,
+                imageSources: ['/branding/Stoker/stoker-1.jpg', '/branding/Stoker/stoker-2.jpg', '/branding/Stoker/stoker-3.jpg', '/branding/Stoker/stoker-4.jpg']
+            }
+        ];
         let locoScrollInstance;
         const workPopup = document.getElementById("work-details-popup");
         const closeWorkPopup = document.getElementById("closePopup");
